/*
 * Copyright 2022 Javiera Peña Miranda
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package cl.ucn.disc.dsm.pictwin.backend.jpa;

import cl.ucn.disc.dsm.pictwin.backend.model.User;
import lombok.NonNull;
import org.springframework.data.repository.ListCrudRepository;
import org.springframework.stereotype.Repository;

import java.util.Optional;

/**
 * The repository of User.
 * @author Javiera Penna-Miranda
 */
@Repository
public interface UserRepository extends ListCrudRepository<User,Long> {

    /**
     * Return the User with the email
     * @param email to use
     * @return the Opcional of User
     */
    Optional<User> findOneByEmail(@NonNull String email);

}
